[metadata]
name = nntpserver
version = 0.0.3
author = Manos Pitsidianakis
author_email = epilys@nessuent.xyz
description = No dependency, single file NNTP server library for developing modern, rfc3977-compliant (bridge) NNTP servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epilys/nntpserver.py
project_urls =
    Bug Tracker = https://github.com/epilys/nntpserver.py/issues
classifiers =
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Usenet News
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
